--- a/angularapp/src/app/components/register/register.component.css
+++ b/angularapp/src/app/components/register/register.component.css
@@ -36,14 +36,15 @@
   }
   
   .primary {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
+    margin-top: 10px;
+    padding: 10px 15px;
     border: none;
     border-radius: 4px;
+    background-color: #337ab7;
+    color: #fff;
     cursor: pointer;
   }
   
   .primary:hover {
-    background-color: #45a049;
+    background-color: #1e5b91;
   }
