--- a/angularapp/src/app/components/edit-house/edit-house.component.css
+++ b/angularapp/src/app/components/edit-house/edit-house.component.css
@@ -1,86 +1,54 @@
 .left-buttons {
-    display: flex;
-    justify-content: flex-start;
-    margin-bottom: 20px;
-  }
-  
-  .left-buttons button {
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    background-color: #e6e6e6;
-    color: #333;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  .left-buttons button:hover {
-    background-color: #ccc;
-  }
-  
-  .create-house-listing {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .create-house-listing form {
-    width: 100%;
-    max-width: 500px;
-  }
-  
-  .create-house-listing label {
-    display: block;
-    margin-bottom: 5px;
-    text-align: left;
-    font-weight: bold;
-  }
-  
-  .create-house-listing input[type="text"],
-  .create-house-listing textarea,
-  .create-house-listing select,
-  .create-house-listing input[type="number"] {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .create-house-listing .listing,
-  .create-house-listing .experiences,
-  .create-house-listing .property,
-  .create-house-listing .etc {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  
-  .create-house-listing .etc input[type="checkbox"] {
-    margin-left: 5px;
-  }
-  
-  .create-house-listing .primary {
-    margin-top: 10px;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    background-color: #337ab7;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  .create-house-listing .primary:hover {
-    background-color: #23527c;
-  }
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+}
+
+.left-buttons button {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  background-color: #e6e6e6;
+  color: #333;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.left-buttons button:hover {
+  background-color: #ccc;
+}
+
+.error{
+  color: red;
+}
+
+
+input[type="number"]{
+  width: 25%;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+select option:hover {
+  background-color: #ffffff;
+  color: #fff;
+}
+
+.summary-input,
+.space-input {
+  height: 75px;
+}
 
   .image-slider {
     display: flex;
     align-items: center;
   }
     .image-container {
-      max-width: 100%;
+      width: auto;
       height: auto;
     }
     
@@ -91,7 +59,12 @@
     .navigation-buttons {
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content:flex-start;
+      height: auto;
     }
+
+.submit-button{
+  margin-top: 75px;
+}
     
   
