--- a/angularapp/src/app/components/user-profile/user-profile.component.css
+++ b/angularapp/src/app/components/user-profile/user-profile.component.css
@@ -1,53 +1,15 @@
-.container {
-  margin-top: 20px;
+.nav-buttons{
+  justify-content: left;
+  margin-top: 50px;
+  margin-right: 50px;
 }
 
-.section-heading {
-  color: #333;
-  font-size: 24px;
-  margin-bottom: 20px;
+.nav-buttons button{
+  margin-bottom: 25px;
 }
 
-.left-buttons {
-  margin-bottom: 20px;
-}
-
-.error {
-  color: red;
-  margin-top: 5px;
-}
-
-.error p {
-  margin: 0;
-}
-
-#description-null {
-  font-style: italic;
-  color: #999;
-}
-
-.primary {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 8px 16px;
-  font-size: 14px;
-  cursor: pointer;
-}
-
-.primary:hover {
-  background-color: #0056b3;
-}
-
-.btn-primary {
-  background-color: #007bff;
-  color: #fff;
-}
-
-.btn-primary:hover {
-  background-color: #0056b3;
-}
-
-.btn-primary:focus {
-  box-shadow: none;
+.profile-col{
+  display: flex;
+  width: auto;
+  height: auto;
 }
