--- a/angularapp/src/app/components/house/house.component.css
+++ b/angularapp/src/app/components/house/house.component.css
@@ -9,28 +9,64 @@
   padding: 10px 20px 0 20px;
 }
 
+.thumbnail-container{
+  display: flex;
+  justify-content:center;
+}
+
 .thumbnail {
-  height: 100px;
-  width: auto;
+  margin-top: 50px;
+  height: auto;
+  width: 250px;
   object-fit: cover;
   border-radius: 30px;
 }
 
-.listing-location {
-  padding: 10px 20px 20px 20px;
+.maps-link{
+  height: auto;
+  width: 20px;
 }
 
-  .listing-location::before {
-    content: url("/assets/location-pin.svg") / "";
-  }
+section.listing {
+  background-color: #f5f5f5;
+}
 
-section.listing a {
-  padding-left: 20px;
+.text-right {
+  text-align: right;
+}
+
+.details{
+  margin-top: 25px;
+}
+
+.listing-location{
+  margin-top: -10px;
+  font-weight: bold;
+}
+
+.pricing{
+  margin-top: -15px;
+  font-weight: bold;
+}
+
+.property-link {
+  display: inline-block;
+  margin-right: 10px;
+  color: white;
+  padding: 10px;
+  border: 1px solid #0d6efd;
+  background: none;
+  background-color: #0d6efd;
+  border-radius: 4px; /* Add border-radius to make the edges less sharp */
+  text-decoration: none; /* Remove default underline for better appearance */
+  transition: background-color 0.3s, color 0.3s; /* Add smooth transition effects */
+  width: 100px;
+  height: auto;
+}
+
+.property-link:hover {
   text-decoration: none;
-  color: purple;
+  background-color: #0b5ed7;
+  border-color: #0b5ed7;
 }
 
-  section.listing a::after {
-    content: "\203A";
-    margin-left: 5px;
-  }
