--- a/angularapp/src/app/components/user-profile/user-profile.component.css
+++ b/angularapp/src/app/components/user-profile/user-profile.component.css
@@ -1,3 +1,10 @@
+.layout{
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #f5f5f5;
+  margin-top: 40px;
+}
+
 .nav-buttons{
   justify-content: left;
   margin-top: 50px;
