--- a/angularapp/src/app/app.component.css
+++ b/angularapp/src/app/app.component.css
@@ -1,115 +1,115 @@
-.buttons{
-    justify-content: right;
+.navbar{
+    margin-bottom: 20px;
+}
+
+.brand{
+    width: 2%;
+}
+
+.brand-logo{
+    max-width: 100%;
+    height: auto;
+}
+
+.search-container{
+    margin-top: 10px;
+}
+    
+    
+.user{
+    margin-top: 10px;
+}
+    
+.register{
+border: white;
+background-color: #0d6efd;
+padding: 10px;
+border-radius: 8px;
+color: white;
+margin-right: 10px;
+}
+    
+.register:hover{
+background-color: #0b5ed7;
+color:black;
+cursor: pointer;
+}
+    
+.login{
+border: white;
+background-color: #0d6efd;
+padding: 10px;
+border-radius: 8px;
+color: white;
+margin-right: 100px;
+}
+    
+.login:hover{
+background-color: #0b5ed7;
+color:black;
+cursor: pointer;
 }
 
 .logout{
-    border: white;
-    background-color: #0d6efd;
-    padding: 10px;
-    border-radius: 8px;
-    color: white;
-    margin-right: 10px;
-    }
+border: white;
+background-color: #0d6efd;
+padding: 10px;
+border-radius: 8px;
+color: white;
+margin-right: 10px;
+}
     
-    .logout:hover{
-    background-color: #0b5ed7;
-    color:black;
-    cursor: pointer;
-    }
-    
-    .user-profile{
-    border: white;
-    background-color: #0d6efd;
-    padding: 10px;
-    border-radius: 8px;
-    color: white;
-    margin-right: 10px;
-    }
+.logout:hover{
+background-color: #0b5ed7;
+color:black;
+cursor: pointer;
+}
 
-    .user-profile:hover{
-    background-color: #0b5ed7;
-    color:black;
-    cursor: pointer;
-    }
-    
-    .user{
-    display: flex;
-    justify-content: flex-end;
-    margin-top: -30px;
-    
-    }
-    
-    .register{
-    border: white;
-    background-color: #0d6efd;
-    padding: 10px;
-    border-radius: 8px;
-    color: white;
-    margin-right: 10px;
-    }
-    
-    .register:hover{
-    background-color: #0b5ed7;
-    color:black;
-    cursor: pointer;
-    }
-    
-    .login{
-    border: white;
-    background-color: #0d6efd;
-    padding: 10px;
-    border-radius: 8px;
-    color: white;
-    margin-right: 100px;
-    }
-    
-    .login:hover{
-    background-color: #0b5ed7;
-    color:black;
-    cursor: pointer;
-    }
+.user-profile{
+border: white;
+background-color: #0d6efd;
+padding: 10px;
+border-radius: 8px;
+color: white;
+margin-right: 10px;
+}
 
-    
-.search-wrapper {
-    display: flex;
-    justify-content: center;
-    width: 125%;
-    }
-    
-.search{
-    width: 50%;
-    margin-top: 10px;
-    }
-    
+.user-profile:hover{
+background-color: #0b5ed7;
+color:black;
+cursor: pointer;
+}
+
 input[type="text"] {
-      border: solid 1px #337ab7;
-      padding: 10px;
-      border-radius: 8px;
-      display: inline-block;
-      text-align: center;
-      width: 100%;
-    }
+border: solid 1px #337ab7;
+padding: 10px;
+border-radius: 8px;
+display: inline-block;
+text-align: center;
+width: 70%;
+}
     
 input[type="text"]:hover{
-      border:solid 1px #0b5ed7;
-      background: rgb(235, 235, 235);
-    }
+border:solid 1px #0b5ed7;
+background: rgb(235, 235, 235);
+}
     
 input[type="text"]:focus{
-      border:solid 1px #0b5ed7;
-    }
-    
+border:solid 1px #0b5ed7;
+}
+
+
 .searchbutton {
-      padding: 10px;
-      border: solid 1px #0d6efd;
-      background: #0d6efd;
-      color: white;
-      border-radius: 8px;
-      width: auto;
-    }
+    float: right;
+    padding: 10px;
+    border: solid 1px #0d6efd;
+    background: #0d6efd;
+    color: white;
+    border-radius: 8px;
+}
     
 .searchbutton:hover{
-      background-color: #0b5ed7;
-      color:black;
-      cursor: pointer;
-    }
+background-color: #0b5ed7;
+color:black;
+cursor: pointer;
+}
