--- a/angularapp/src/app/components/details/details.component.css
+++ b/angularapp/src/app/components/details/details.component.css
@@ -7,15 +7,47 @@
   flex-grow: 1;
 }
 
+.listing-block {
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 12px; 
+  margin-top: 20px;
+  margin-bottom: 20px;
+  height: 80px;
+}
+
+.image{
+  width: 25%;
+  height: auto;
+  vertical-align: middle;
+}
+.house-accomodates{
+  vertical-align: middle;
+}
+
+.transit{
+  margin-left: 20px;
+}
+
+.beds {
+  /* Add any styles you want for the bedrooms-beds span */
+  margin-left: 39px; /* Optional: Add some spacing between the image and the labels */
+}
+
 .image-container {
   position: relative;
   display: flex;
   align-items: left;
 }
 
+.host-name{
+  font-weight: normal;
+}
+
 .image-container img {
   width: 100%;
   height: auto;
+  border-radius: 12px;
 }
 
 
@@ -23,6 +55,7 @@
   position: relative;
   box-shadow: 0 0 0 0 rgba(0, 123, 255, 0);
   transition: box-shadow 0.3s ease;
+  border-radius: 12px;
 }
 
 .image-wrapper:hover .right-button,
