Multiple Updates. Added support for host profile pics to be uploaded and edited.Added support for booking with user authenticated account.Fixed property preview image. Need to add support for reviews and show them and a host preview page with more details about the host(so more host variables to be created in register).

--- a/angularapp/src/app/components/host-profile/host-profile.component.css
+++ b/angularapp/src/app/components/host-profile/host-profile.component.css
@@ -1,3 +1,19 @@
+.profile-pic{
+  max-width: 200px;
+  height: auto;
+  border-radius: 12px;
+}
+
+.profile-container{
+  margin-top: 20px;
+  margin-bottom: 30px;
+  width: 200px;
+}
+
+.pic-container{
+  margin-left: 230px;
+}
+
 .preview-house {
   margin-bottom: 20px;
   padding: 10px;
