--- a/angularapp/src/app/components/details/details.component.css
+++ b/angularapp/src/app/components/details/details.component.css
@@ -3,6 +3,14 @@
   align-items: flex-start;
 }
 
+.profile-pic{
+  margin-left: 50px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%; 
+  object-fit: cover;
+}
+
 .listing-description {
   flex-grow: 1;
 }
@@ -14,6 +22,12 @@
   margin-top: 20px;
   margin-bottom: 20px;
   height: 80px;
+}
+
+.logout a {
+  color: blue; 
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .calendar{
@@ -50,7 +64,7 @@
   padding: 10px;
   border-radius: 12px;
   height: auto;
-  transform: translateZ(10px);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .price{
@@ -94,7 +108,25 @@
   border-radius: 12px;
 }
 
+.submit-buttons{
+  margin-left: 40px;
+}
 
+.submit-button-2{
+  margin-left: 10px;
+}
+
+.error{
+  color: red;
+}
+.maps-link{
+  height: auto;
+  width: 20px;
+}
+
+.logout{
+  margin-top: 30px;
+}
 .image-wrapper {
   position: relative;
   box-shadow: 0 0 0 0 rgba(0, 123, 255, 0);
