--- a/angularapp/src/app/components/ClientView/preview-host/preview-host.component.css
+++ b/angularapp/src/app/components/ClientView/preview-host/preview-host.component.css
@@ -18,6 +18,34 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.image{
+  width: 25%;
+  height: auto;
+  vertical-align: middle;
+}
+
+.host-info{
+  vertical-align: middle;
+}
+
+.listing-block {
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 12px; 
+  margin-top: 20px;
+  margin-bottom: 20px;
+  height: 80px;
+}
+
+.host-location{
+  margin-left: 5px;
+}
+
+.maps-link{
+  height: auto;
+  width: 20px;
+}
+
 .profile-pic{
     width: 150px;
     height: 150px;
