--- a/angularapp/src/app/components/ClientView/preview-host/preview-host.component.css
+++ b/angularapp/src/app/components/ClientView/preview-host/preview-host.component.css
@@ -87,3 +87,43 @@
   .etc{
     text-align: right;
   }
+
+  
+.reviews-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.review-box{
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 12px;
+  height: auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+
+.reviews{
+  margin-top: 20px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 12px;
+  width: 400px;
+  height: auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.review-contents{
+  margin-left: 20px;
+}
+
+
+.reviewer-name{
+  font-weight: normal;
+}
+
+.review-rating{
+  font-weight: bold;
+}
