--- a/angularapp/src/app/app.component.css
+++ b/angularapp/src/app/app.component.css
@@ -14,6 +14,7 @@
 .search-container{
     margin-top: 10px;
 }
+
     
     
 .user{
@@ -87,7 +88,8 @@ padding: 10px;
 border-radius: 8px;
 display: inline-block;
 text-align: center;
-width: 70%;
+width: 600px;
+height: auto;
 }
     
 input[type="text"]:hover{
