--- a/angularapp/src/app/components/Property/preview-house/preview-house.component.css
+++ b/angularapp/src/app/components/Property/preview-house/preview-house.component.css
@@ -12,10 +12,21 @@
 .thumbnail {
   width: 300px;
   height: auto;
+  border-radius: 10px;
+  box-shadow: 0px 0px 0px transparent; /* Initially transparent box shadow */
+  transition: box-shadow 0.3s; /* Add a smooth transition for the box shadow */
+}
+
+.thumbnail:hover {
+  box-shadow: 0 0 10px 5px rgba(0, 123, 255, 0.5); /* Blue aura on hover */
 }
 
 .listing-location {
   margin-bottom: 10px;
+}
+
+.header{
+  margin-bottom: 20px;
 }
 
 .property-link {
@@ -46,8 +57,11 @@
 .deletecheck {
   margin-top: 20px;
   padding: 10px;
+  border-radius: 10px;
   background-color: #ffe6e6;
   border: 1px solid #ffcccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 400px;
 }
 
 .message {
@@ -56,12 +70,9 @@
 }
 
 .delete-button {
-  background-color: blue;
-  color: white;
-  border: none;
-  padding: 5px 10px;
-  margin-right: 10px;
+  justify-content: center;
   cursor: pointer;
+  margin-right: 20px;
 }
 
 .delete-button.red {
