--- a/angularapp/src/app/components/User/host-profile/host-profile.component.css
+++ b/angularapp/src/app/components/User/host-profile/host-profile.component.css
@@ -14,13 +14,6 @@
   margin-left: 230px;
 }
 
-.preview-house {
-  margin-bottom: 20px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
 .preview-house h3 {
   font-size: 18px;
   margin-bottom: 10px;
@@ -43,11 +36,14 @@
   justify-content: left;
   margin-top: 50px;
   margin-right: 50px;
+  margin-left: 30px;
 }
 
 .add-house{
   margin-top: 10px;
+  margin-bottom: 20px;
 }
+
 .buttons button{
   margin-bottom: 25px;
 }
@@ -60,11 +56,21 @@
 
 .layout{
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 12px;
   background-color: #f5f5f5;
+  padding: 10px;
   margin-top: 40px;
+  width: 1200px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .houses-container{
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  background-color: #f5f5f5;
+  padding: 10px;
   margin-top: 75px;
+  width: 1200px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 100px;
 }
