QOF: 1)Updated Login,Register,House,Email,ChangePassword,PersonalData,NavBar html to be more elegant 2)Fixed a bug where register errors would not appear

--- a/angularapp/src/app/components/Authentication/login/login.component.css
+++ b/angularapp/src/app/components/Authentication/login/login.component.css
@@ -1,47 +1,44 @@
-.Login {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f7f7f7;
-  border: 1px solid #ddd;
-  border-radius: 5px;
+.login {
+  width: 500px;
+  height: auto;
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  background-color: #f5f5f5;
+  padding: 10px;
+  margin-top: 75px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .section-heading {
   font-size: 24px;
-  font-weight: bold;
   margin-bottom: 20px;
+  text-align: center;
+}
+
+.details {
+  display: flex;
+  flex-direction:column;
+  align-items: left;
+  text-align: left;
+  margin-bottom: 10px;
 }
 
 label {
-  display: block;
   font-weight: bold;
   margin-bottom: 10px;
+  margin-right: 20px;
 }
 
-input[type="text"],
-input[type="password"] {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin-bottom: 10px;
-}
 
 .error {
   color: red;
   margin-bottom: 10px;
 }
 
-button.primary {
-  background-color: #337ab7;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+.buttons{
+  margin-top: 40px;
 }
 
-button.primary:hover{
-  background-color: #1e5b91;
+button{
+  margin-left: 140px;
 }
