--- a/angularapp/src/app/components/ClientView/house/house.component.css
+++ b/angularapp/src/app/components/ClientView/house/house.component.css
@@ -1,7 +1,9 @@
 .listing {
-  background: var(--accent-color);
-  border-radius: 30px;
-  padding-bottom: 30px;
+  border-radius: 12px;
+  background-color: #f5f5f5;
+  padding: 10px;
+  margin-top: 75px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .listing-heading {
@@ -31,11 +33,8 @@
   width: 20px;
 }
 
-section.listing {
-  background-color: #f5f5f5;
-}
 
-section.listing:hover{
+.listing:hover{
   background-color: #e9e7e7;
 }
 
