--- a/angularapp/src/app/components/User/email/email.component.css
+++ b/angularapp/src/app/components/User/email/email.component.css
@@ -1,24 +1,29 @@
 .layout{
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 12px;
   background-color: #f5f5f5;
+  padding: 10px;
   margin-top: 40px;
+  width: 1200px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.nav-buttons{
-  justify-content: left;
+
+.buttons{
   margin-top: 50px;
   margin-right: 50px;
+  margin-left: 30px;
 }
 
-.nav-buttons button{
+.buttons button{
   margin-bottom: 25px;
 }
 
 .email-col{
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  align-items: left;
+  text-align: left;
 }
 
 .error{
