--- a/angularapp/src/app/components/User/password/password.component.css
+++ b/angularapp/src/app/components/User/password/password.component.css
@@ -1,17 +1,27 @@
 .layout{
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 12px;
   background-color: #f5f5f5;
+  padding: 10px;
   margin-top: 40px;
+  width: 1200px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 
-.nav-buttons{
-  justify-content: left;
+.buttons{
   margin-top: 50px;
   margin-right: 50px;
+  margin-left: 30px;
 }
 
-.nav-buttons button{
+.password{
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  text-align: left;
+}
+
+.buttons button{
   margin-bottom: 25px;
 }
