--- a/angularapp/src/app/components/User/personal-data/personal-data.component.css
+++ b/angularapp/src/app/components/User/personal-data/personal-data.component.css
@@ -1,18 +1,20 @@
 .layout{
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 12px;
   background-color: #f5f5f5;
+  padding: 10px;
   margin-top: 40px;
+  width: 1200px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-
-.nav-buttons{
-  justify-content: left;
+.buttons{
   margin-top: 50px;
   margin-right: 50px;
+  margin-left: 30px;
 }
 
-.nav-buttons button{
+.buttons button{
   margin-bottom: 25px;
 }
 
@@ -20,6 +22,10 @@
   color: red;
 }
 
-.delete-header{
-  margin-top: 20px;
+.download-row{
+  margin-top: 40px;
+}
+
+.delete-row{
+  margin-top: 70px;
 }
